# sticker2

./: CONTRIBUTORS  Cargo.toml  README.md  shell.nix  tests.nix
.github/workflows/: rust.yml  test.yml
doc/: pretrained.md
nix/: Cargo.nix  models.nix  sources.json
sticker/: Cargo.toml
sticker-utils/: Cargo.toml
sticker-utils/src/: io.rs  main.rs  sent_proc.rs  tagger.rs
sticker-utils/src/subcommands/: annotate.rs  distill.rs  finetune.rs  mod.rs  prepare.rs  server.rs
sticker/src/: config.rs  dataset.rs  lib.rs  tensor.rs
sticker/src/encoder/categorical/: mod.rs
sticker/src/encoder/layer/: mod.rs
sticker/src/encoders/: config.rs  encoders.rs  mod.rs
sticker/src/input/: mod.rs  vectorizer.rs
sticker/src/model/: mod.rs
sticker/src/optimizers/: adamw.rs  mod.rs
sticker/src/tagger/: mod.rs
sticker/testdata/: sticker.conf
sticker2/: Cargo.toml
sticker2-utils/: Cargo.toml  build.rs
sticker2-utils/protos/: sticker2.proto
sticker2-utils/src/: io.rs  main.rs  save.rs  sent_proc.rs  traits.rs  util.rs
sticker2-utils/src/protos/: mod.rs
sticker2-utils/src/subcommands/: annotate.rs  distill.rs  filter_len.rs  finetune.rs  mod.rs  prepare.rs  server.rs
sticker2-utils/src/summary/: mod.rs
sticker2/benches/: mst.rs
sticker2/src/: config.rs  dataset.rs  error.rs  lib.rs
sticker2/src/encoders/: config.rs  encoders.rs
sticker2/src/input/: bert.rs  mod.rs  vectorizer.rs  xlm_roberta.rs
sticker2/src/model/: bert.rs  biaffine.rs  bilinear.rs  mod.rs  pairwise_bilinear.rs  seq_classifiers.rs
sticker2/src/optimizers/: grad_scale.rs
sticker2/src/tagger/: mod.rs
sticker2/testdata/: bert-base-german-cased-vocab.txt  sticker.conf
utils/: plot-layer-weights
