[package]
name = "sticker2-utils"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"

[[bin]]
name = "sticker2"
path = "src/main.rs"

[dependencies]
clap = "2"
conllx = "0.12.1"
failure = "0.1"
indicatif = "0.13"
itertools = "0.8"
ordered-float = { version = "1", features = ["serde"] }
serde_yaml = "0.8"
stdinout = "0.4"
sticker2 = { path = "../sticker2" }
sticker-encoders = "0.1.4"
sticker-transformers = "0.3"
tch = "0.1.5"
threadpool = "1"
