[package]
name = "sticker2-utils"
version = "0.2.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"

[[bin]]
name = "sticker2"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = "2"
conllu = "0.5"
indicatif = "0.13"
itertools = "0.8"
ordered-float = { version = "1", features = ["serde"] }
serde_yaml = "0.8"
stdinout = "0.4"
sticker2 = { path = "../sticker2", default-features = false }
sticker-encoders = "0.5"
sticker-transformers = { version = "0.5", default-features = false }
tch = "0.1.5"
threadpool = "1"

[features]
default = ["load-hdf5"]
load-hdf5 = ["sticker-transformers/load-hdf5", "sticker2/load-hdf5"]
