[package]
name = "sticker2-utils"
version = "0.4.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler"
documentation = "https://github.com/stickeritis/sticker"
homepage = "https://github.com/stickeritis/sticker"
repository = "https://github.com/stickeritis/sticker.git"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "../LICENSE.md"

[[bin]]
name = "sticker2"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = "2"
conllu = "0.5"
indicatif = "0.13"
itertools = "0.9"
ordered-float = { version = "1", features = ["serde"] }
serde_yaml = "0.8"
stdinout = "0.4"
sticker2 = { path = "../sticker2", version = "0.4", default-features = false }
sticker-encoders = "0.5"
sticker-transformers = { version = "0.8", default-features = false }
tch = "0.2.0"
threadpool = "1"

[features]
default = ["load-hdf5"]
load-hdf5 = ["sticker-transformers/load-hdf5", "sticker2/load-hdf5"]
