[package]
name = "sticker2"
version = "0.2.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler"
documentation = "https://github.com/stickeritis/sticker"
homepage = "https://github.com/stickeritis/sticker"
repository = "https://github.com/stickeritis/sticker.git"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "../LICENSE.md"

[dependencies]
conllu = "0.3"
edit_tree = "0.1.1"
failure = "0.1"
hdf5 = "0.5"
ndarray = "0.13"
numberer = "0.2"
ordered-float = "1"
rand = "0.7"
rand_xorshift = "0.2"
sentencepiece = "0.1.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sticker-encoders = "0.3.1"
sticker-transformers = { version = "0.4.1", default-features = false }
tch = "0.1.5"
toml = "0.5"
wordpieces = "0.2"

[dev-dependencies]
approx = "0.3"
criterion = "0.3"
maplit = "1"
ndarray-rand = "0.11"

[features]
default = ["load-hdf5"]
load-hdf5 = ["sticker-transformers/load-hdf5"]
model-tests = []

[[bench]]
name = "mst"
harness = false