[package]
name = "sticker2"
version = "0.3.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler"
documentation = "https://github.com/stickeritis/sticker"
homepage = "https://github.com/stickeritis/sticker"
repository = "https://github.com/stickeritis/sticker.git"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "../LICENSE.md"

[dependencies]
anyhow = "1"
conllu = "0.5"
edit_tree = "0.1.1"
hdf5 = { version = "0.6", optional = true }
ndarray = "0.13"
numberer = "0.2"
ordered-float = "1"
rand = "0.7"
rand_xorshift = "0.2"
sentencepiece = "0.3.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sticker-encoders = "0.5.1"
sticker-transformers = { version = "0.8", default-features = false }
tch = "0.2.0"
thiserror = "1"
toml = "0.5"
wordpieces = "0.4"

[dev-dependencies]
approx = "0.3"
criterion = "0.3"
maplit = "1"
ndarray-rand = "0.11"

[features]
default = ["load-hdf5"]
load-hdf5 = ["sticker-transformers/load-hdf5", "hdf5"]
model-tests = []

[[bench]]
name = "mst"
harness = false
